<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.limates.unmsm.ui.home.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/std_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/juan_gabriel" />

        <TextView
            android:id="@+id/std_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_welcome"
            android:textColor="#780000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/std_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/std_name"
                    style="@style/HomeTextTitles"
                    android:text="@string/home_name" />

                <TextView
                    android:id="@+id/std_data_name"
                    style="@style/HomeDataTexts"
                    android:text="@string/std_name" />

                <TextView
                    android:id="@+id/std_lastname"
                    style="@style/HomeTextTitles"
                    android:text="@string/home_lastname" />

                <TextView
                    android:id="@+id/std_data_lastname"
                    style="@style/HomeDataTexts"
                    android:text="@string/std_lastname" />

                <TextView
                    android:id="@+id/std_code"
                    style="@style/HomeTextTitles"
                    android:text="@string/home_code" />

                <TextView
                    android:id="@+id/std_data_code"
                    style="@style/HomeDataTexts"
                    android:text="@string/std_code" />

                <TextView
                    style="@style/HomeTextTitles"
                    android:text="@string/home_dni" />

                <TextView
                    android:id="@+id/std_data_dni"
                    style="@style/HomeDataTexts"
                    android:text="@string/std_dni" />

                <TextView
                    style="@style/HomeTextTitles"
                    android:text="@string/home_faculty" />

                <TextView
                    android:id="@+id/std_data_faculty"
                    style="@style/HomeDataTexts"
                    android:text="@string/std_faculty" />

                <TextView
                    style="@style/HomeTextTitles"
                    android:text="@string/home_major" />

                <TextView
                    android:id="@+id/std_data_major"
                    style="@style/HomeDataTexts"
                    android:text="@string/std_major" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
