<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_service_description"
            style="@style/DataDetails"
            android:text="@string/stadiumServiceDescription"/>

        <TextView
            android:id="@+id/details_service_1"
            style="@style/DataDetails"
            android:text="@string/stadiumService1"/>
        <TextView
            android:id="@+id/details_service_2"
            style="@style/DataDetails"
            android:text="@string/stadiumService2"/>
        <TextView
            android:id="@+id/details_service_3"
            style="@style/DataDetails"
            android:text="@string/stadiumService3"/>
        <TextView
            android:id="@+id/details_service_4"
            style="@style/DataDetails"
            android:text="@string/stadiumService4"/>

    </LinearLayout>

</LinearLayout>