<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/event_description_title"
        style="@style/DataDetails"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="Evento x" />

    <TextView
        android:id="@+id/event_description_details"
        style="@style/DataDetails"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/e_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place"
            android:textColor="@color/grey_900"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_description_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/e_place2"
            android:textColor="@color/grey_900"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/organized"
            android:textColor="@color/grey_900"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_description_organizer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/e_organized"
            android:textColor="@color/grey_900"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/grey_900"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_description_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/e_date2"
            android:textColor="@color/grey_900"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="@color/grey_900"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_description_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/e_time2"
            android:textColor="@color/grey_900"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
