<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="16dp"
    tools:context="pe.limates.unmsm.ui.home.grades.fragments.calculator.CalculatoroldActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_description"
            style="@style/CalculatorTopRow"
            android:layout_weight="3"
            android:paddingEnd="4dp"
            android:paddingStart="8dp"
            android:text="@string/item" />

        <TextView
            android:id="@+id/item_weight"
            style="@style/CalculatorTopRow"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/item_grade"
            style="@style/CalculatorTopRow"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingEnd="8dp"
            android:paddingStart="4dp"
            android:text="@string/grade" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_weight_grades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_weight_grade" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/calc"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/prom"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/final_prom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="@string/grade1" />

    </LinearLayout>

</LinearLayout>